# keystone-covert-channel

./: CMakeLists.txt  README.md
eapp/: CMakeLists.txt  bht.c  btb.c  eapp-trojan.c  eapp_trojan.h  edge_wrapper.c  edge_wrapper.h  l1d.c  l1i.c
host/: bht.cpp  btb.cpp  edge_wrapper.cpp  edge_wrapper.h  host-spy.cpp  host-spy.h  l1d.cpp  l1i.cpp
include/: chipsupport.h  edge_defines.h
